--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,6 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".SplashScreenActivity">
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="250dp"
@@ -18,5 +19,5 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="54dp"
         android:contentDescription="@string/logo"
-        android:src="@drawable/img" />
+        android:src="@drawable/logo" />
 </RelativeLayout>
