--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:text="@string/name"
+        android:text="@string/place_name"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/ivPlace"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/location"
+        android:text="@string/place_location"
         app:layout_constraintStart_toEndOf="@+id/ivPlace"
         app:layout_constraintTop_toBottomOf="@+id/tvNamePlace" />
 </androidx.constraintlayout.widget.ConstraintLayout>
