--- a/app/src/main/res/layout/activity_place.xml
+++ b/app/src/main/res/layout/activity_place.xml
@@ -8,10 +8,11 @@
 
     <TextView
         android:id="@+id/tvNameP"
-        android:layout_width="313dp"
-        android:layout_height="27dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:inputType="textMultiLine"
+        android:layout_marginEnd="16dp"
         android:text="@string/place_name"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -20,9 +21,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tvLocationP"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="12dp"
+        android:text="@string/place_location"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/vpImages"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.517"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvNameP"
+        app:layout_constraintVertical_bias="0.0" />
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/vpImages"
-        android:layout_width="356dp"
+        android:layout_width="0dp"
         android:layout_height="170dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
@@ -35,8 +52,10 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/description_label"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -46,27 +65,12 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/tvLocationP"
-        android:layout_width="355dp"
-        android:layout_height="22dp"
-        android:inputType="textMultiLine"
-        android:text="@string/place_location"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/vpImages"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.517"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNameP"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
         android:id="@+id/tvDescription"
-        android:layout_width="355dp"
-        android:layout_height="87dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="12dp"
-        android:inputType="textMultiLine"
         android:text="@string/description"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,8 +79,10 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/comments_label"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -87,12 +93,14 @@
 
     <ListView
         android:id="@+id/lvComments"
-        android:layout_width="353dp"
-        android:layout_height="274dp"
-        android:layout_marginBottom="44dp"
+        android:layout_width="0dp"
+        android:layout_height="360dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
