--- a/app/src/main/res/layout/item_images_place.xml
+++ b/app/src/main/res/layout/item_images_place.xml
@@ -6,21 +6,21 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/ivFirst"
+        android:id="@+id/ivF"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/ivSecond"
+        app:layout_constraintEnd_toStartOf="@+id/ivS"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_launcher_background" />
 
     <ImageView
-        android:id="@+id/ivSecond"
+        android:id="@+id/ivS"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="16dp"
