--- a/app/src/main/res/layout/provisional.xml
+++ b/app/src/main/res/layout/provisional.xml
@@ -38,45 +38,44 @@
         tools:ignore="SpeakableTextPresentCheck">
 
         <LinearLayout
-            android:id="@+id/llImages"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-<!--            <ImageView-->
-<!--                android:id="@+id/ivFirst"-->
-<!--                android:layout_width="150dp"-->
-<!--                android:layout_height="150dp"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:contentDescription="@string/todo"/>-->
+            <ImageView
+                android:id="@+id/ivFirst"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_margin="10dp"
+                android:contentDescription="@string/todo"/>
 
-<!--            <ImageView-->
-<!--                android:id="@+id/ivSecond"-->
-<!--                android:layout_width="150dp"-->
-<!--                android:layout_height="150dp"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:contentDescription="@string/todo"/>-->
+            <ImageView
+                android:id="@+id/ivSecond"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_margin="10dp"
+                android:contentDescription="@string/todo"/>
 
-<!--            <ImageView-->
-<!--                android:id="@+id/ivThird"-->
-<!--                android:layout_width="150dp"-->
-<!--                android:layout_height="150dp"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:contentDescription="@string/todo"/>-->
+            <ImageView
+                android:id="@+id/ivThird"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_margin="10dp"
+                android:contentDescription="@string/todo"/>
 
-<!--            <ImageView-->
-<!--                android:id="@+id/ivFourth"-->
-<!--                android:layout_width="150dp"-->
-<!--                android:layout_height="150dp"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:contentDescription="@string/todo"/>-->
+            <ImageView
+                android:id="@+id/ivFourth"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_margin="10dp"
+                android:contentDescription="@string/todo"/>
 
-<!--            <ImageView-->
-<!--                android:id="@+id/ivFifth"-->
-<!--                android:layout_width="150dp"-->
-<!--                android:layout_height="150dp"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:contentDescription="@string/todo"/>-->
+            <ImageView
+                android:id="@+id/ivFifth"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_margin="10dp"
+                android:contentDescription="@string/todo"/>
 
         </LinearLayout>
     </HorizontalScrollView>
