--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,6 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR_KEY_HERE</string>
+<!--    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">${MAPS_API_KEY}</string>-->
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBXAvNWrrcHQcLm55hdgxuQQv9xpHa1GjI</string>
 </resources>
