--- a/app/src/main/res/layout/activity_place.xml
+++ b/app/src/main/res/layout/activity_place.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".PlaceActivity">
 
     <TextView
@@ -11,12 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="16dp"
         android:text="@string/place_name"
         android:textAlignment="center"
         android:textSize="18sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvLocationP"
@@ -26,7 +26,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="10dp"
         android:text="@string/place_location"
-        android:textAlignment="center"/>
+        android:textAlignment="center" />
 
     <HorizontalScrollView
         android:id="@+id/svImages"
@@ -41,44 +41,7 @@
             android:id="@+id/llImages"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-<!--            <ImageView-->
-<!--                android:id="@+id/ivFirst"-->
-<!--                android:layout_width="150dp"-->
-<!--                android:layout_height="150dp"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:contentDescription="@string/todo"/>-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/ivSecond"-->
-<!--                android:layout_width="150dp"-->
-<!--                android:layout_height="150dp"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:contentDescription="@string/todo"/>-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/ivThird"-->
-<!--                android:layout_width="150dp"-->
-<!--                android:layout_height="150dp"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:contentDescription="@string/todo"/>-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/ivFourth"-->
-<!--                android:layout_width="150dp"-->
-<!--                android:layout_height="150dp"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:contentDescription="@string/todo"/>-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/ivFifth"-->
-<!--                android:layout_width="150dp"-->
-<!--                android:layout_height="150dp"-->
-<!--                android:layout_margin="10dp"-->
-<!--                android:contentDescription="@string/todo"/>-->
-
-        </LinearLayout>
+            android:orientation="horizontal" />
     </HorizontalScrollView>
 
     <TextView
@@ -89,7 +52,7 @@
         android:layout_marginEnd="16dp"
         android:text="@string/description_label"
         android:textSize="16sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvDescription"
@@ -98,7 +61,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="12dp"
-        android:text="@string/description"/>
+        android:text="@string/description" />
 
     <TextView
         android:id="@+id/textView5"
@@ -108,7 +71,7 @@
         android:layout_marginEnd="16dp"
         android:text="@string/comments_label"
         android:textSize="16sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/lvComments"
@@ -116,6 +79,5 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="28dp"/>
-
+        android:layout_marginBottom="28dp" />
 </LinearLayout>
