--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -20,15 +20,16 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tvLocationPlace"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="21dp"
-        android:layout_marginEnd="3dp"
-        android:text="@string/place_location"
-        android:textSize="12sp" />
+    <ImageView
+        android:id="@+id/ivPlace"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
+        android:contentDescription="TODO"
+        app:srcCompat="@drawable/ic_launcher_background"
+        tools:ignore="ImageContrastCheck" />
 
     <TextView
         android:id="@+id/tvNamePlace"
@@ -41,16 +42,30 @@
         android:textSize="13sp"
         android:textStyle="bold" />
 
-    <ImageView
-        android:id="@+id/ivPlace"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="3dp"
-        android:contentDescription="TODO"
-        app:srcCompat="@drawable/ic_launcher_background"
-        tools:ignore="ImageContrastCheck" />
+    <TextView
+        android:id="@+id/tvLocationPlace"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="3dp"
+        android:text="@string/place_location"
+        android:textSize="12sp" />
+
+    <RatingBar
+        android:id="@+id/rBPlace"
+        style="?android:attr/ratingBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="15dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="39dp"
+        android:indeterminate="false"
+        android:isIndicator="true"
+        android:numStars="5"
+        android:stepSize="0.5"
+        android:theme="@style/Widget.AppCompat.RatingBar"
+        tools:ignore="SpeakableTextPresentCheck" />
+
 </androidx.cardview.widget.CardView>
 
 <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
