Last Changes, fixing filter of main menu

--- a/app/src/main/res/layout/activity_place.xml
+++ b/app/src/main/res/layout/activity_place.xml
@@ -55,6 +55,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:layout_marginTop="5dp"
             app:cardCornerRadius="1dp"
             app:cardElevation="1dp"
             app:cardPreventCornerOverlap="true"
@@ -94,6 +95,7 @@
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:text="@string/description" />
@@ -104,6 +106,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginTop="10dp"
         android:text="@string/comments_label"
         android:textSize="16sp"
         android:textStyle="bold" />
