--- a/app/src/main/res/layout/activity_visits.xml
+++ b/app/src/main/res/layout/activity_visits.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.VisitsActivity">
+    tools:context=".presentation.view.VisitsActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
