--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".presentation.view.SplashScreenActivity">
+    tools:context=".presentation.view.activities.SplashScreenActivity">
 
     <ImageView
         android:id="@+id/imageView"
