--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -73,7 +73,8 @@
         android:layout_marginStart="360dp"
         android:layout_marginTop="39dp"
         android:layout_marginEnd="3dp"
-        app:srcCompat="@drawable/ic_favorite_white_24dp"
+        android:backgroundTint="#FFFFFF"
+        app:srcCompat="@drawable/ic_favorite_red_24dp"
         tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.cardview.widget.CardView>
